# python

./: .gitignore  README.md
day00/ex00/: README.md  answers.txt  requirements.txt  script.sh
day00/ex01/: exec.py
day00/ex02/: whois.py
day00/ex03/: count.py
day00/ex04/: operations.py
day00/ex05/: kata00.py  kata01.py  kata02.py  kata03.py  kata04.py
day00/ex06/: recipe.py
day00/ex07/: filterwords.py
day00/ex08/: sos.py
day00/ex09/: guess.py
day00/ex10/: loading.py
day01/ex00/: book.py  recipe.py  test.py
day01/ex01/: game.py  test.py
day01/ex02/: test.py  vector.py
day01/ex03/: generator.py  test.py
day01/ex04/: eval.py  test.py
day01/ex05/: banking_test1.py  banking_test2.py  the_bank.py
day02/ex00/: ft_filter.py  ft_map.py  ft_reduce.py  test.py
day02/ex01/: main.py
day02/ex02/: logger.py
day02/ex03/: bad.csv  csvreader.py  test.py
day02/ex04/: LICENSE  README.md  build.sh  setup.cfg
day02/ex04/src/: logger.py  progress.py
day02/ex04/src/my_minipack.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
day02/ex05/: TinyStatistician.py
day03/: ex03Test.py
day03/ex00/: NumpyCreator.py
day03/ex01/: ImageProcessor.py
day03/ex02/: ScrapBooker.py
day03/ex03/: ColorFilter.py
day03/ex04/: Kmeans.py
day04/ex00/: FileLoader.py
day04/ex01/: FileLoader.py  YoungestFellah.py
day04/ex02/: ProportionBySport.py
day04/ex03/: HowManyMedals.py
day04/ex04/: SpatioTemporalData.py
day04/ex05/: HowManyMedalsByCountry.py
day04/ex06/: MyPlotLib.py  test.py
day04/ex07/: Komparator.py  (+2 more)
project/: agent.py  game.py  main.py
