[metadata]
name = my_minipack
version = 1.0.0
author = Mustapha Annouaoui
author_email = nawawimstapha@gmail.com
description = This package for educational purposes progressbar + logger
long_description = file: README.md
license= LICENSE
long_description_content_type = text/markdown
url = https://github.com/Mustapha-Nawawi-T/python
classifiers =
    Intended Audience :: Developers
    Intended Audience :: Students
    Topic :: Education
    Topic :: HowTo
    Topic :: Package
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
package = find:
python_requires = >=3.7
include_package_data = False